--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
-    <title>New GID Styles LOCAL!!!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">    <link rel="stylesheet" href="style.css" /> 
+    <title>GID LOCAL</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +45,7 @@
           </ul>
         </div>
     </nav>
-    </div>
+
     <div class="img_cabecera d-flex align-items-center">
         <div class="container">
             <h1>Outdoor / Directos / Virtuales</h1>
@@ -64,48 +63,112 @@
         </div>
     </div>
 
-    <div class="page-wrapper">
-        <div class="presentacion">
-            <div class="panel">
-                <h3>Actividades Outdoor</h3>
-                <p>Redescubre tus entrenamientos con nuestras 
-                    actividades dirigidas al aire libre en 
-                    diferentes rincones de Barcelona!
-                </p>
-                <button class="btn">Ver Outdoors</button>
-            </div>
-
-            <div class="carrousel-div">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                        <img class="d-block w-100" src="/images/outdoorcarrousel1.jpg" alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/outdoorcarrousel2.jpg" alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                        <img class="d-block w-100" src="/images/outdoorcarrousel3.jpg" alt="Third slide">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    </div>
-            </div>  
+    <div class="presentacion">
+        <div class="panel1">
+            <h3>Actividades Outdoor</h3>
+            <p>Redescubre tus entrenamientos con nuestras 
+                actividades dirigidas al aire libre en 
+                diferentes rincones de Barcelona!
+            </p>
+            <button class="btn">Ver Outdoors</button>
         </div>
+
+        <!-- Carrousel Presentación -->
+        <div class="panel"> 
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="prueba">
+                            <div class="item">
+                                <img src="/images/outdoorcarrousel1.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="item-text">
+                                <div class="item-text-header">
+                                    <div class="header-item">
+                                        <h5>Hatha Ioga</h5>
+                                        <h6>YOGA</h6>
+                                    </div>
+                                    <div class="header-button">
+                                        <button class="buttonitem">Quedan 13 plazas</button>
+                                    </div>
+                                </div>
+                                <div class="item-text-text">
+                                    <p>Lorem ipsum dolor sit amet
+                                        consectetur con nuestras 
+                                        actividades dirigidas al aire libre en 
+                                        diferentes rincones de Barcelona!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <div class="prueba">
+                            <div class="item">
+                                <img src="/images/outdoorcarrousel1.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="item-text">
+                                <div class="item-text-header">
+                                    <div class="header-item">
+                                        <h5>Hatha Ioga</h5>
+                                        <h6>YOGA</h6>
+                                    </div>
+                                    <div class="header-button">
+                                        <button class="buttonitem">Quedan 13 plazas</button>
+                                    </div>
+                                </div>
+                                <div class="item-text-text">
+                                    <p>Lorem ipsum dolor sit amet
+                                        consectetur con nuestras 
+                                        actividades dirigidas al aire libre en 
+                                        diferentes rincones de Barcelona!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                    <div class="prueba">
+                        <div class="item">
+                            <img src="/images/outdoorcarrousel1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="item-text">
+                            <div class="item-text-header">
+                                <div class="header-item">
+                                    <h5>Hatha Ioga</h5>
+                                    <h6>YOGA</h6>
+                                </div>
+                                <div class="header-button">
+                                    <button class="buttonitem">Quedan 13 plazas</button>
+                                </div>
+                            </div>
+                            <div class="item-text-text">
+                                <p>Lorem ipsum dolor sit amet
+                                    consectetur con nuestras 
+                                    actividades dirigidas al aire libre en 
+                                    diferentes rincones de Barcelona!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"> < </span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden"> > </span>
+                </button>
+                </div>           
+        </div>      
     </div>
 
+    <!-- Contenido body DDBB -->
+    <div class="content-div">
+        
+    </div>
     <footer class="footer">
         <div class="container">
 
@@ -144,9 +207,7 @@
     <script src="javascript.js"></script>
 
     <!-- Bootstrap Styles css -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    
 </body>
 </html>
